# claude-code-skills

./: .doc-versions.json  .env.example  .gitignore  CHANGELOG.md  COMPLETE_URL_LIST.md  COMPLETION_PLAN.md  CONTRIBUTING.md  FAILED_LINKS.md  GUIDE_PROGRESS.md  HTTP_VERIFICATION_REPORT.md  LINK_VERIFICATION_FINAL_REPORT.md  MAINTENANCE.md  NEXT_SESSION.md  PROGRESS.md  PROGRESS_MASTER.md  QUALITY_STANDARDS.md  README.ja.md  README.md  SECURITY.md  STATUS.md  UPDATES.md  URL_VERIFICATION_REPORT.md  extract_urls.py  fix_403_links.sh  fix_all_broken_links.sh  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  typedoc.json  verify_links_http.py  verify_links_http.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: api-cost-daily-report.yml  api-cost-monthly-report.yml  api-cost-weekly-report.yml  ci.yml  pages.yml  secret-scan.yml  track-progress.yml  weekly-update-check.yml
01-cs-fundamentals/algorithm-and-data-structures/: SKILL.md
01-cs-fundamentals/computer-science-fundamentals/: SKILL.md
01-cs-fundamentals/operating-system-guide/: SKILL.md
01-cs-fundamentals/programming-language-fundamentals/: SKILL.md
02-programming/async-and-error-handling/: SKILL.md
02-programming/go-practical-guide/: SKILL.md
02-programming/object-oriented-programming/: SKILL.md
02-programming/regex-and-text-processing/: SKILL.md
02-programming/rust-systems-programming/: SKILL.md
02-programming/typescript-complete-guide/: SKILL.md
03-software-design/clean-code-principles/: SKILL.md
03-software-design/design-patterns-guide/: SKILL.md
03-software-design/system-design-guide/: SKILL.md
04-web-and-network/api-and-library-guide/: SKILL.md
04-web-and-network/browser-and-web-platform/: SKILL.md
04-web-and-network/network-fundamentals/: SKILL.md
04-web-and-network/web-application-development/: SKILL.md
05-infrastructure/aws-cloud-guide/: SKILL.md
05-infrastructure/development-environment-setup/: SKILL.md
05-infrastructure/devops-and-github-actions/: SKILL.md
05-infrastructure/docker-container-guide/: SKILL.md
05-infrastructure/linux-cli-mastery/: SKILL.md
05-infrastructure/version-control-and-jujutsu/: SKILL.md
05-infrastructure/windows-application-development/: SKILL.md
06-data-and-security/authentication-and-authorization/: SKILL.md
06-data-and-security/security-fundamentals/: SKILL.md
06-data-and-security/sql-and-query-mastery/: SKILL.md
07-ai/ai-analysis-guide/: SKILL.md
07-ai/ai-audio-generation/: SKILL.md
07-ai/ai-automation-and-monetization/: SKILL.md
07-ai/ai-era-development-workflow/: SKILL.md
07-ai/ai-era-gadgets/: SKILL.md
07-ai/ai-visual-generation/: SKILL.md
07-ai/custom-ai-agents/: SKILL.md
07-ai/llm-and-ai-comparison/: SKILL.md
08-hobby/dj-skills-guide/: PROGRESS.md  README.md  SESSION_RESUME.md  STRUCTURE_REVIEW.md  skill.md
SESSION_ARCHIVE/session-2026-02-11/: 02-SETTINGS.md  04-AGENT-PROMPTS.md  05-verify-and-resume.sh  06-EXACT-TARGET-FILES.md
TEMPLATES/: GUIDE_TEMPLATE.md  PROGRESS_TEMPLATE.md
_IMPROVEMENTS/: 90-POINT-ROADMAP.md  PARALLEL-EXECUTION-PLAN.md  PHASE2-COMPLETION-REPORT.md  PHASE3-COMPLETION-REPORT.md  PHASE4-COMPLETION-REPORT.md  PHASE4-PROGRESS-REPORT.md  PLAN-C-FEASIBLE.md
_IMPROVEMENTS/phase1/: statistical-info-plan.md
_IMPROVEMENTS/phase4/: QUALITY-REPO-CRITERIA.md
_legacy/_IMPROVEMENTS/: EXECUTION-START.md  MIT-EVALUATION-REPORT.md  PHASE1-COMPLETION-REPORT.md  PHASE5-COMPLETION-REPORT.md  QUICK-START.md  README.md
_legacy/automation/cli-development/templates/python-typer/: pyproject.toml
_legacy/automation/cli-development/templates/python-typer/src/cli/: main.py
_legacy/career-guides/: README.md  freelance-guide.md
_legacy/docs/: NAVIGATION.md  SKILLS-MAP.md
_legacy/examples/: crdt-example.ts  stats-example.ts
_legacy/troubleshooting/: README.md  nodejs-troubleshooting.md  (+1 more)
_meta/: RESUME_PROMPT.md  REVIEW_PLAN.md
_original-skills/: README.md
ai-analysis-guide/: SKILL.md
ai-audio-generation/: SKILL.md
ai-era-development-workflow/: SKILL.md
ai-era-gadgets/: SKILL.md
algorithm-and-data-structures/: SKILL.md
api-and-library-guide/: SKILL.md
api-cost-skill/: package-lock.json  package.json  test-tracking.ts
aws-cloud-guide/: SKILL.md
backend-development/: SKILL.md
backend/python-development/templates/: pyproject.toml
career-guides/: job-application-guide.md  portfolio-creation.md
ci-cd-automation/: SKILL.md
clean-code-principles/: SKILL.md
cli-development/: SKILL.md
code-review/: COMPLETION_SUMMARY.md  SKILL.md
database-design/: SKILL.md
demos/: index.html
dependency-management/: SKILL.md
development-environment-setup/: SKILL.md
devops-and-github-actions/: SKILL.md
docker-container-guide/: SKILL.md
docs/: IMPACT.md  INDEX.md
documentation/: SKILL.md
frontend-performance/: SKILL.md
git-workflow/: README.md  SKILL.md
incident-logger/: SKILL.md
integrated-projects/: README.md
ios-development/: SKILL.md
ios-project-setup/: SKILL.md
ios-security/: SKILL.md
lessons-learned/: SKILL.md
linux-cli-mastery/: SKILL.md
mcp-development/: SKILL.md
networking-data/: SKILL.md
nextjs-development/: SKILL.md
nodejs-development/: SKILL.md
object-oriented-programming/: SKILL.md
operating-system-guide/: SKILL.md
python-development/: SKILL.md
quality-assurance/: SKILL.md
react-development/: SKILL.md
rust-systems-programming/: SKILL.md
script-development/: SKILL.md
scripts/: check-references.sh  count-chars.sh  fix_broken_links.sh  fix_documentation_links.sh  skill-to-zenn.sh  track-progress.js  verify_urls.py
swiftui-patterns/: SKILL.md
testing-strategy/: IMPROVEMENT_PLAN.md  SKILL.md
troubleshooting/: backend-troubleshooting.md  ios-troubleshooting.md  react-troubleshooting.md
version-control-and-jujutsu/: SKILL.md
web-accessibility/: SKILL.md
web-application-development/: SKILL.md
web-development/: SKILL.md
windows-application-development/: SKILL.md
(+2093 files in other folders)
